--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <main id="product-list">
         <!-- Product listing will be dynamically generated here -->
-        <img src="IMG20230425121420.jpg" alt="${product.name}">
+        <img src="IMG20230425121420.jpg" alt="frame">
             <h3>frame 1</h3>
             <p>Display your memories beautifully with our sleek frame. Designed to complement any decor, it's the perfect way to showcase your favorite photos/p>
             <p>100</p>
