--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
         .product-card button:hover {
             background-color: #0056b3;
         }
-
-        /* Additional styles */
+        
         header {
             background-color: #333;
             color: #fff;
@@ -59,6 +58,12 @@
             bottom: 0;
             width: 100%;
         }
+        .container{
+           text-align:center;
+           position:relative;
+            top:50%;
+            left:50%;
+        }
     </style>
 </head>
 <body>
@@ -68,11 +73,13 @@
 
     <main id="product-list">
         <!-- Product listing will be dynamically generated here -->
-        <img src="IMG20230425121420.jpg" alt="frame">
+        <div class=container>
+            <img src="op_1108_a_013.png" alt="frame">
             <h3>frame 1</h3>
-            <p>Display your memories beautifully with our sleek frame. Designed to complement any decor, it's the perfect way to showcase your favorite photos/p>
+            <p>Display your memories beautifully with our sleek frame. Designed to complement any decor, it's the perfect way to showcase your favorite photos</p>
             <p>100</p>
             <button>Add to Cart</button>
+        </div>
     </main>
 
     <footer>
