--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
            position:relative;
             top:50%;
             left:50%;
+            border: solid 1px black;
+            width:300px;
+            height:500px;
         }
     </style>
 </head>
@@ -74,11 +77,11 @@
     <main id="product-list">
         <!-- Product listing will be dynamically generated here -->
         <div class=container>
-            <img src="op_1108_a_013.png" alt="frame">
-            <h3>frame 1</h3>
-            <p>Display your memories beautifully with our sleek frame. Designed to complement any decor, it's the perfect way to showcase your favorite photos</p>
-            <p>100</p>
-            <button>Add to Cart</button>
+            <img class="product-card" src="op_1108_a_013.png" alt="frame">
+            <h3 class="product-card">frame 1</h3>
+            <p class="product-card">Display your memories beautifully with our sleek frame. Designed to complement any decor, it's the perfect way to showcase your favorite photos</p>
+            <p class="product-card">100</p>
+            <button class="product-card">Add to Cart</button>
         </div>
     </main>
 
