--- a/index.html
+++ b/index.html
@@ -61,11 +61,10 @@
         .container{
            text-align:center;
            position:relative;
-            top:50%;
-            left:50%;
             border: solid 1px black;
             width:300px;
             height:500px;
+            overflow:hidden;
         }
     </style>
 </head>
