--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Make a Wish</title>
     <style>
         /* styles.css */
+        body{
+            overflow:scroll;
+        }
         .product-card {
             border: 1px solid #ccc;
             border-radius: 5px;
