--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
            position:relative;
             border: solid 1px black;
             width:300px;
-            height:500px;
-            overflow:hidden;
+            height:550px;
+            overflow:scroll;
         }
     </style>
 </head>
@@ -81,9 +81,9 @@
         <div class=container>
             <img class="product-card" src="op_1108_a_013.png" alt="frame">
             <h3 class="product-card">frame 1</h3>
-            <p class="product-card">Display your memories beautifully with our sleek frame. Designed to complement any decor, it's the perfect way to showcase your favorite photos</p>
             <p class="product-card">100</p>
             <button class="product-card">Add to Cart</button>
+            <p class="product-card">Display your memories beautifully with our sleek frame. Designed to complement any decor, it's the perfect way to showcase your favorite photos</p>
         </div>
     </main>
 
