--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             color: #fff;
             text-align: center;
             padding: 10px;
-            position: fixed;
+            position: relative;
             bottom: 0;
             width: 100%;
         }
