--- a/index.html
+++ b/index.html
@@ -69,6 +69,21 @@
             height:500px;
             overflow:scroll;
         }
+        /* Responsive styles */
+@media screen and (max-width: 768px) {
+    .container {
+        width: 100%;
+        max-width: 300px; /* Adjust max-width as needed */
+        margin: 0 auto;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .product-card {
+        width: 100%;
+    }
+}
+
     </style>
 </head>
 <body>
