--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Make a Wish</title>
     <style>
         /* styles.css */
-        body{
-            overflow:scroll;
+          *{
+            overflow:hidden;
         }
         .product-card {
             border: 1px solid #ccc;
@@ -67,7 +67,7 @@
             border: solid 1px black;
             width:400px;
             height:500px;
-            overflow:scroll;
+            overflow:hidden;
         }
         /* Responsive styles */
 @media screen and (max-width: 768px) {
