--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
             border-radius: 5px;
             padding: 10px;
             margin: 10px;
-            width: 200px;
+            width: 300px;
+            height:500px;
             display: inline-block;
+            overflow:scroll;
         }
 
         .product-card img {
