--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Make a Wish</title>
     <style>
         /* styles.css */
-          *{
-            overflow:hidden;
+          body{
+            overflow:scroll;
         }
         .product-card {
             border: 1px solid #ccc;
