--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             text-align: center;
             padding: 10px;
             position: relative;
-            bottom: 0;
+            bottom: 0px;
             width: 100%;
         }
         .container{
