--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             color: #fff;
             text-align: center;
             padding: 10px;
-            position: relative;
+            position: fixed;
             bottom: 0px;
             width: 100%;
         }
@@ -67,7 +67,9 @@
             border: solid 1px black;
             width:400px;
             height:450px;
-            overflow:hidden;
+            padding:10px;
+            margin:5px;
+            overflow:scroll;
         }
         /* Responsive styles */
 @media screen and (max-width: 768px) {
