--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <img class="product-card" src="op_1108_a_013.png" alt="frame">
             <h3 class="product-card">frame 1</h3>
             <p class="product-card">100</p>
-            <button class="product-card">Add to Cart</button>
+            <button class="product-card">Contact Us</button>
             <p class="product-card">Display your memories beautifully with our sleek frame. Designed to complement any decor, it's the perfect way to showcase your favorite photos</p>
         </div>
     </main>
