--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         .product-card h3 {
             font-size: 18px;
-            margin: 10px 0;
+            margin: 5px 0;
         }
 
         .product-card p {
@@ -65,6 +65,7 @@
            text-align:center;
            position:relative;
             border: solid 1px black;
+            border-radius:5px;
             width:350px;
             height:450px;
             padding:10px;
