--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             border-radius: 5px;
             padding: 10px;
             margin: 10px;
-            width: 300px;
+            width: 200px;
             display: inline-block;
         }
 
@@ -66,14 +66,14 @@
            position:relative;
             border: solid 1px black;
             border-radius:5px;
-            width:350px;
-            height:450px;
+            width:300px;
+            height:400px;
             padding:10px;
             margin:5px;
             overflow:scroll;
         }
         /* Responsive styles */
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 408px) {
     .container {
         width: 100%;
         max-width: 300px; /* Adjust max-width as needed */
