--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Make a Wish</h1>
+        <h1>SHOPPING</h1>
     </header>
 
     <main id="product-list">
